2007-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/elp.el (elp-report-limit, elp-restore-all)
	(elp-unset-master, elp-results): Fix typos.
	(elp-sort-by-function, elp-use-standard-output, elp-recycle-buffers-p):
	Doc fixes.

	* msb.el (msb--many-menus): Remove variable.
	(msb-max-menu-items, msb--add-to-menu): Doc fixes.
	(msb-menu-cond, msb-item-handling-function, msb--create-function-info)
	(msb--toggle-menu-type): Fix typos in docstrings.

	* shadowfile.el (shadow-inhibit-overload, shadow-remove-from-todo)
	(shadow-insert-var): Doc fixes.
	(shadow-file-match, shadow-define-cluster, shadow-define-regexp-group):
	Reflow docstrings.
	(shadow-parse-fullname, shadow-read-files): Fix typos in docstrings.

2007-10-30  Juanma Barranquero  <lekktu@gmail.com>

	* ediff-hook.el (ediff, ediff-files, ediff-buffers, ebuffers, ediff3)
	(ediff-files3, ediff-buffers3, ebuffers3, erevision, ediff-revision):
	Fix typos in autoload docstrings.

	* loadhist.el (unload-feature): Remove redundant check.

2007-10-30  Richard Stallman  <rms@gnu.org>

	* savehist.el (savehist-save): Obey savehist-ignored-variables.

2007-10-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-delete-out-of-scope): New option.
	(gdb-var-update-handler-1): Use it.

2007-10-30  Juanma Barranquero  <lekktu@gmail.com>

	* loadhist.el (unload-feature): Remove erroneous check for the
	FEATURE-unload-function variable; check the existence of the
	function (that's what the docstring says, and it makes more sense).

	* follow.el (follow-unload-function): Add docstring.
	(follow-unload-function): Remove variable.

	* server.el (server-unload-function): Remove variable.
	(server-unload-function): Unbind `server-edit' from `C-x #'.

	* uniquify.el (uniquify-unload-function): Add docstring.
	(uniquify-unload-function): Remove variable.

	* ses.el (ses-unload-function): New function.

2007-10-29  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/unsafep.el (unsafep, unsafep-function)